# edu-gfx-engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  notes.txt
src/: CMakeLists.txt  main.cpp
src/api/: CMakeLists.txt  Camera.cpp  Camera.h  Mouse.cpp  Mouse.h
src/data/low_poly_hanging_light/: hanging_light.mtl
src/data/shaders/: general.frag  general.vert  light_source.frag  light_source.vert  test.frag  test.vert
src/debug/: CMakeLists.txt  Debugger.cpp  Debugger.h
src/gfx/: Asset.cpp  Asset.h  AssetModel.cpp  AssetModel.h  CMakeLists.txt  Mapping.cpp  Mapping.h  Material.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/objects/: Asset.cpp  Asset.h  CMakeLists.txt  IObject.h  Object.cpp  Object.h
src/objects/interface/: ITransformable.h  IVisible.h  Transformable.cpp  Transformable.h
src/objects/light/: DirectLight.cpp  DirectLight.h  ILightSource.h  IPointLight.h  LightSource.cpp  LightSource.h  PointLight.cpp  PointLight.h  SpotLight.cpp  SpotLight.h
src/renderer/: CMakeLists.txt  Renderer.cpp  Renderer.h
